istio-10-ml-apl/ml-namespace.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: istio-mla             # (1)Istio管理対象の名前空間
  labels:
    istio-injection: enabled  # (2)Istio-proxyサイドカーの自動注入有効化
