istio-10-ml-apl/istio-vs-w-cb.yaml
apiVersion: networking.istio.io/v1beta1
kind: VirtualService
metadata:
  name: ml-head-vs
  namespace: istio-mla
spec:
  hosts:
  - svc4.labo.local    # 受け取るFQDNを指定
  gateways:
  - ml-gateway         # 受け取るゲートウェイを指定
  http:
  - match:
    - uri:             # URIが一致したらルート設定で転送
        exact: /phrase
    route:
    - destination:
        host: ml-head  # (1)宛先サービス
        port:
          number: 80
        subset: v1     # (2)宛先ルールのサブセットを参照
      weight: 80       # トラフィック分割の割合
    - destination:
        host: ml-head  # (1)宛先サービス
        port:
          number: 80
        subset: v2     # (3)宛先ルールのサブセットを参照
      weight: 20       # トラフィック分割の割合
---
# 宛先ルール
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ml-dr
  namespace: istio-mla
spec:
  host: ml-head
  subsets:             
  - name: v1
    labels:
      version: v1
  - name: v2
    labels:
      version: v2
  trafficPolicy:       # (1)サーキットブレーカー設定
    connectionPool:    # (2)Envoyのドキュメントを参照
      tcp:
        maxConnections: 100          # (3)同時接続数上限
      http:
        http2MaxRequests: 1000       # (4)リクエスト数の制限
        maxRequestsPerConnection: 10 # (5)コネクションあたりのリクエスト数
    outlierDetection:
      consecutiveErrors: 7           # (6)HTTP 500台のエラー発生回数の閾値
      interval: 5m                   # (7)エラー発生の計測時間
      baseEjectionTime: 15m          # (8)リクエストから除外する時間
